--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "vitepf",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "pfsolidity",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elbert-git/vitepf.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/elbert-git/vitepf/issues"
+  },
+  "homepage": "https://github.com/elbert-git/vitepf#readme",
   "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "vite": "^3.0.0"
+    "remixd": "^0.2.4"
   }
 }
